Produzione/force-app/main/default/objects/Risposta_Questionario__c/Risposta_Questionario__c.object-meta.xml
<CustomObject>
    <description>Risposte del questionario</description>
    <label>Risposta Questionario</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Nome Risposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risposte Questionario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>