Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Azienda_Partecipante__c.field-meta.xml
<CustomField>
    <fullName>Azienda_Partecipante__c</fullName>
    <formula>Partecipazione_Evento__r.RS_X_Evento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Azienda Partecipante</label>
    <type>Text</type>
</CustomField>