Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Domanda_Questionario__c.field-meta.xml
<CustomField>
    <fullName>Domanda_Questionario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Domanda a cui ha risposto</description>
    <label>Domanda Questionario</label>
    <referenceTo>Domanda_Questionario__c</referenceTo>
    <relationshipLabel>Risposte Questionario</relationshipLabel>
    <relationshipName>Risposte_Questionario</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>