Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <description>IP da cui proviene la risposta</description>
    <label>IP</label>
    <type>TextArea</type>
</CustomField>