Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Mese_Di_Riferimento__c.field-meta.xml
<CustomField>
    <fullName>Mese_Di_Riferimento__c</fullName>
    <formula>MONTH(DATEVALUE(Data_Ora_Risposta__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mese Di Riferimento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>