Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Nome_Partecipante__c.field-meta.xml
<CustomField>
    <fullName>Nome_Partecipante__c</fullName>
    <description>Nome partecipante per rapporti</description>
    <formula>Partecipazione_Evento__r.Nome1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Partecipante</label>
    <type>Text</type>
</CustomField>