Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Nome_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Nome_Speaker__c</fullName>
    <formula>Domanda_Questionario__r.Partecipazione_Workshop__r.Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Speaker</label>
    <type>Text</type>
</CustomField>