Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Nome_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Nome_Workshop__c</fullName>
    <formula>Domanda_Questionario__r.Domanda_Padre__r.Workshop__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Workshop</label>
    <type>Text</type>
</CustomField>