Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Non_Considerare_Analisi_Utente__c.field-meta.xml
<CustomField>
    <fullName>Non_Considerare_Analisi_Utente__c</fullName>
    <description>Risultato di utenti da non considerare nell&apos;analisi</description>
    <formula>Utente__r.Non_Considerare_Analisi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Considerare Analisi Utente</label>
    <type>Checkbox</type>
</CustomField>