Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Ordine_Domanda__c.field-meta.xml
<CustomField>
    <fullName>Ordine_Domanda__c</fullName>
    <formula>Domanda_Questionario__r.Ordine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordine Domanda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>