Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Pagina_Domanda__c.field-meta.xml
<CustomField>
    <fullName>Pagina_Domanda__c</fullName>
    <formula>Domanda_Questionario__r.Pagina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pagina Domanda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>