Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Partecipazione_Evento__c.field-meta.xml
<CustomField>
    <fullName>Partecipazione_Evento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Utente che ha risposto</description>
    <label>Partecipazione Evento</label>
    <referenceTo>Partecipazione_Evento__c</referenceTo>
    <relationshipLabel>Risposte Questionario</relationshipLabel>
    <relationshipName>Risposte_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>