Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/RS_Nome_Cognome_Utente__c.field-meta.xml
<CustomField>
    <fullName>RS_Nome_Cognome_Utente__c</fullName>
    <description>Ragione Sociale Nome e Cognome del&apos;utente custom collegato</description>
    <formula>Utente__r.Nome_Commerciale__c + &quot; - &quot; +  Utente__r.Nome__c + &quot; &quot; +  Utente__r.Cognome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ragione Sociale Nome e Cognome del&apos;utente custom collegato</inlineHelpText>
    <label>RS Nome Cognome Utente</label>
    <type>Text</type>
</CustomField>