Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Speaker_e_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Speaker_e_Workshop__c</fullName>
    <description>Concatenazione Speaker - Workshop</description>
    <formula>Nome_Speaker__c + &quot; - &quot; +  Nome_Workshop__c</formula>
    <inlineHelpText>Concatenazione Speaker - Workshop</inlineHelpText>
    <label>Speaker e Workshop</label>
    <type>Text</type>
</CustomField>