Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Utente_Lexus__c.field-meta.xml
<CustomField>
    <fullName>Utente_Lexus__c</fullName>
    <formula>Utente__r.Lexus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utente Lexus</label>
    <type>Checkbox</type>
</CustomField>