Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Utente_Toyota__c.field-meta.xml
<CustomField>
    <fullName>Utente_Toyota__c</fullName>
    <formula>Utente__r.Toyota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utente Toyota</label>
    <type>Checkbox</type>
</CustomField>