Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Valore__c.field-meta.xml
<CustomField>
    <fullName>Valore__c</fullName>
    <description>Raggruppamento dei campo Valore Numerico e Valore Testuale</description>
    <formula>TEXT( Valore_Numerico__c ) + IF(NOT(ISBLANK(Valore_Numerico__c )) &amp;&amp; NOT(ISBLANK(Valore_Testuale__c)), &quot; - &quot;, &quot;&quot;) + Valore_Testuale__c</formula>
    <inlineHelpText>Raggruppamento dei campo Valore Numerico e Valore Testuale</inlineHelpText>
    <label>Valore</label>
    <type>Text</type>
</CustomField>