Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Valore_Numerico__c.field-meta.xml
<CustomField>
    <fullName>Valore_Numerico__c</fullName>
    <description>Eventuale risposta numerica</description>
    <label>Valore Numerico</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>