Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Valore_Numerico_Per_Peso_Raggruppamento__c.field-meta.xml
<CustomField>
    <fullName>Valore_Numerico_Per_Peso_Raggruppamento__c</fullName>
    <description>Valore Numerico per peso genitore del raggruppamento. Necessario per media ponderata.</description>
    <formula>Valore_Numerico__c * Domanda_Questionario__r.Raggruppamento__r.Peso_Genitore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valore Numerico per peso genitore del raggruppamento. Necessario per media ponderata.</inlineHelpText>
    <label>Valore Numerico Per Peso Raggruppamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>