Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Valore_Testuale__c.field-meta.xml
<CustomField>
    <fullName>Valore_Testuale__c</fullName>
    <description>Eventuale risposta testuale</description>
    <label>Valore Testuale</label>
    <type>TextArea</type>
</CustomField>