Produzione/force-app/main/default/objects/Risposta_Questionario__c/fields/Valore_Testuale_Lungo__c.field-meta.xml
<CustomField>
    <fullName>Valore_Testuale_Lungo__c</fullName>
    <description>Eventuale risposta testuale lunga</description>
    <label>Valore Testuale Lungo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>