Produzione/force-app/main/default/objects/Risposta_Questionario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Data_Ora_Risposta__c</columns>
    <columns>Domanda_Questionario__c</columns>
    <columns>Info_Domanda__c</columns>
    <columns>IP__c</columns>
    <columns>Mese_Di_Riferimento__c</columns>
    <columns>Utente__c</columns>
    <columns>Valore__c</columns>
    <columns>Valore_Numerico__c</columns>
    <columns>Valore_Numerico_Per_Peso_Raggruppamento__c</columns>
    <columns>Valore_Testuale__c</columns>
    <columns>Valore_Testuale_Lungo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>