Produzione/force-app/main/default/objects/Risposta_Questionario__c/listViews/Risposte_ADD20.listView-meta.xml
<ListView>
    <fullName>Risposte_ADD20</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partecipazione_Evento__c</field>
        <operation>equals</operation>
        <value>PartEvent-70903</value>
    </filters>
    <label>Risposte ADD20</label>
</ListView>